Fix z-index makingi graph un-interactable in some browsers

--- a/style.css
+++ b/style.css
@@ -9,11 +9,12 @@ body {
     bottom: 0;
     right: 0;
     left: 0;
-    z-index: -1;
 }
 h1 {
     font-family: Helvetica, sans-serif;
     width: 20px;
     color: white;
     margin: 0;
+    z-index: 1;
+    position: relative;
 }
